# WR_Project

./: README.md  main.py  pyproject.toml  requirement.txt
data/: cleaned_data.csv
notebook/: convert_text_2_csv.py  preprocessing_dataset.ipynb  stop_word_remove.ipynb
notebook/train_model/: test.ipynb  train_model_with_BoW.ipynb  train_model_with_BoW_with_smoke.ipynb  train_model_with_CBoW.ipynb  train_model_with_CBoW_with_smoke.ipynb  train_model_with_IFIDF.ipynb  train_model_with_TDIDF_with_smoke.ipynb
stop_word/: khmer_stopwords.csv
streamlit/: app.py
vectorizers/: tfidf_vectorizer.pkl
