[project]
name = "wr-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gensim>=4.4.0",
    "google-genai>=1.57.0",
    "imblearn>=0.0",
    "ipykernel>=7.1.0",
    "khmer-nltk>=1.6",
    "khmereasytools>=0.3.8",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "tensorflow>=2.20.0",
]
